@@ -1,5 +1,5 @@
 /*
- *   $Id: device-bsd44.c,v 1.9 2001/11/20 21:06:10 psavola Exp $
+ *   $Id: device-bsd44.c,v 1.10 2002/01/02 11:01:11 psavola Exp $
  *
  *   Authors:
  *    Craig Metz		<cmetz@inner.net>
@@ -218,6 +218,7 @@ get_v4addr(const char *ifn, unsigned int *dst)
 	
 	memset( &ifr, 0, sizeof( struct ifreq ) );
 	strncpy(ifr.ifr_name, ifn, IFNAMSIZ-1);
+	ifr.ifr_name[IFNAMSIZ-1] = '\0';
 	ifr.ifr_addr.sa_family = AF_INET;
 	
 	if (ioctl(fd, SIOCGIFADDR, &ifr) < 0)
